<resources>
    <!-- FACEBOOK -->
    <string name="facebook_app_id">-</string>
    <string name="fb_login_protocol_scheme">-</string>

    <string name="app_name">ClassRoom</string>
    <string name="level_passed">Level passed!</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="you_won">You won!</string>
    <string name="enter_your_name">Enter your name or use default:</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="results">RESULTS</string>
    <string name="challenge">Do it!</string>
    <string name="play">play</string>
    <string name="score_0">SCORE</string>
    <string name="settings">SETTINGS</string>
    <string name="pre_game_title">Before you start</string>
    <string name="pre_game_set">If you want to play this mode you have to
        sign up with your Google account
    </string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="flips_0">Flips:</string>
    <string name="points_0">Points:</string>
    <string name="lvl">Level</string>
    <string name="complexity">Complexity</string>
    <string name="theme">Theme</string>
    <string name="matched_text1">MATCHED!</string>
    <string name="matched_text2">flips</string>
    <string name="matched_text3">points</string>
    <string name="menu_phone">Phone</string>
    <string name="menu_local">Network</string>
    <string name="menu_user">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="change_name">Change nickname</string>
    <string name="create">Create</string>
    <string name="all_users_title">ALL USERS</string>
    <string name="animals">Animals</string>
    <string name="cars">Cars</string>
    <string name="Food">Food</string>
    <string name="Random">Random</string>


    <!--Русский язык-->
    <string name="in">войти</string>
    <string name="registration">регистрация</string>
    <string name="hello">Добро пожаловать!</string>
    <string name="profile">Профиль</string>
    <string name="this_name">Ваше текущее имя</string>
    <string name="hint_this_name">Вот здесь имя</string>
    <string name="this_surname">Вот здесь фамилия</string>
    <string name="hint_this_surname">Ваша текущая фамилия</string>
    <string name="this_email">Ваша текущая эл.почта</string>
    <string name="hint_this_email">Вот здесь почта</string>
    <string name="redact">Редактировать</string>
    <string name="sign_out_but">Выйти</string>
    <string name="in_name_group">Введите название группы:</string>
    <string name="_">_____________________</string>
    <string name="create_but">Создать</string>
    <string name="in_account">Войти в аккаунт</string>
    <string name="password">Пароль</string>
    <string name="email">Эл. почта</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="phrase_delete">Вы точно хотели бы удалить это?</string>
    <string name="delete">Удалить</string>
    <string name="list_of_children">Список учеников</string>
    <string name="plus">+</string>
    <string name="list_of_teacher">Список учителей</string>
    <string name="list_of_groups">Список групп</string>
    <string name="main_menu">Главное меню</string>
    <string name="teachers">Учителя</string>
    <string name="children">Ученики</string>
    <string name="mathematic">Математика</string>
    <string name="memory">Память</string>
    <string name="soon">Скоро…</string>
    <string name="list_of_group">Список групп</string>
    <string name="new_group">Новая группа</string>
    <string name="right">Правильно</string>
    <string name="all">Всего</string>
    <string name="menu_but">Меню</string>
    <string name="next_but">Дальше</string>
    <string name="your_name_now">Ваше текущее имя</string>
    <string name="your_surname_now">Ваше текущая фамилия:</string>
    <string name="this_name_1">Вот здесь имя</string>
    <string name="this_surname_1">Вот здесь фамилия</string>
    <string name="this_email_1">Ваш текущая эл. почта</string>
    <string name="email_now_1">Вот здесь почта</string>
    <string name="sign_out_1">Выйти</string>
    <string name="settings_1">Настройки</string>
    <string name="complexity_1">Сложность</string>
    <string name="easy_1">Легко</string>
    <string name="medium_1">Средне</string>
    <string name="hard_1">Сложно</string>
    <string name="theme_1">Тема</string>
    <string name="animals_1">Животные</string>
    <string name="cars_1">Машины</string>
    <string name="food_1">Еда</string>
    <string name="random">Рандом</string>
    <string name="total_score">Общий счёт</string>
    <string name="progress_now">Текущий прогресс</string>
    <string name="Statistics">Статистика</string>
    <string name="place_now">Место в классе</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="old_name">Вот тут старое отображается</string>
    <string name="old_surname">Вот тут старая отображается</string>
    <string name="create_new_name">Введите новое имя:</string>
    <string name="create_new_surname">Введите новую фамилию:</string>
    <string name="registration_1">Зарегистрироваться</string>
    <string name="e_mail">Ваш e-mail</string>
    <string name="return_password">Повторите пароль</string>
    <string name="your_surname">Ваша фамилия</string>
    <string name="your_name">Ваше имя</string>
    <string name="i_am_a_teacher">Я учитель</string>
    <string name="namesurname">Имя Фамилия</string>
</resources>
